Fix larger message menu sometimes getting squished

--- a/extension/styles.css
+++ b/extension/styles.css
@@ -12,6 +12,11 @@
 	margin-right: 8px !important;
 }
 
+/* Message menu container */
+.container-3cGP6G {
+	min-width: 6.5rem !important;
+}
+
 /* Right-click menu container */
 .contextMenu-HLZMGh {
 	width: auto !important;
